# MindeChain

./: CMakeLists.txt  README.md
src/: BlockHeader.h  HashFuncs.cpp  HashFuncs.h  Helperfuncs.cpp  Helperfuncs.h  MindeBlock.cpp  MindeBlock.h  MindeHash.h  Miner.h  Transaction.h  User.cpp  User.h  main.cpp
